[package]
name = "garble_lang"
version = "0.7.0"
edition = "2021"
rust-version = "1.60.0" # todo update this
description = "Turing-Incomplete Programming Language for Multi-Party Computation with Garbled Circuits"
repository = "https://github.com/sine-fdn/garble/"
license = "MIT"
categories = ["command-line-utilities", "compilers"]
keywords = [
    "programming-language",
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "smpc",
]

[[bin]]
name = "garble"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
plotters = { version = "0.3.7", optional = true }
schemars = { version = "0.9", optional = true }


[features]
bin = ["dep:clap"]
plot = ["dep:plotters"]
json_schema = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
insta = { version = "1.43.1", features = ["json", "redactions"] }
