[package]
name = "garble_lang"
version = "0.7.0-alpha.1"
edition = "2024"
rust-version = "1.85.0"
description = "Turing-Incomplete Programming Language for Multi-Party Computation with Garbled Circuits"
repository = "https://github.com/sine-fdn/garble/"
license = "MIT"
categories = ["command-line-utilities", "compilers"]
keywords = [
    "programming-language",
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "smpc",
]

[[bin]]
name = "garble"
path = "src/main.rs"
required-features = ["bin"]

[features]
bin = ["dep:clap"]
plot = ["dep:plotters"]
json_schema = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
plotters = { version = "0.3.7", optional = true }
schemars = { version = "0.9", optional = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1.0.148"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
insta = { version = "1.46.0", features = ["json", "redactions"] }
